# miscellaneous

./: .gitignore  README.md
GoogleHash2016/: .gitignore  CMakeLists.txt  GoogleHash2016.cpp  TODO  functions.cpp  functions.hh  sort.cpp
bckUP/: .gitignore  CMakeLists.txt  bckUP.cpp
caching/: CMakeLists.txt  caching.cpp
combinatorics/: CMakeLists.txt  combinatorics.cpp  combinatorics.hh
continuousmapping/: .gitignore  CMakeLists.txt  continuousmapping.cpp  plot.sh
donuts/: CMakeLists.txt  donuts.cpp
fantacalcio/: .gitignore  CMakeLists.txt  fantacalcio.cpp  matrix.hh
geo2alberta/: .gitignore  CMakeLists.txt  geo2alberta2D.cpp  geo2alberta3D.cpp  msh2alberta.cpp
gmshcoherence/: .gitignore  CMakeLists.txt  gmshcoherence.cpp
gmshcreatecoumpoundgeo/: .gitignore  CMakeLists.txt  gmshcompoundmanager.hh  gmshcreatecompoundgeo.cpp
gmshzigzagcircle/: .gitignore  CMakeLists.txt  gmshzigzagcircle.cpp
gnuplotdifference/: .gitignore  CMakeLists.txt  gnuplotdifference.cpp
mpi_workshop/: CMakeLists.txt  blockwrite.cpp  commrank.cpp  cubegather.cpp  hello.cpp  isendirecv.cpp  pingpong.cpp  prime.cpp  procgrid.cpp  randommax.cpp  randomput.cpp  sendrecv.cpp  stridesend.cpp  sumsquares.cpp
permutations/: CMakeLists.txt  matrix.hh  permutations.cpp  permutations.hh
qsubb/: .gitignore  CMakeLists.txt  generatepbb.py  qsubb.cpp
scripts/dune/: README  compile-dune-core  compile-dune-module  compiledunemodule  compiledunemoduleall  compilepetsc.sh  createdunemodule  envar  option.opts  update-dune-core
scripts/gnuplot/: plot.gp  plot.sh
scripts/ubuntu/: configure.sh  vimrc
sparsematrixconverter/: CMakeLists.txt  sparse.cpp
stickmontecarlo/: .gitignore  CMakeLists.txt  stickmontecarlo.cpp
sudoku/: .gitignore  CMakeLists.txt  sudoku.cc  sudoku.hh
threadbarrier/: CMakeLists.txt  thread.cpp
